# Tensorflow-Segmentation

./: .gitignore  .load_model.py.swp  README.md  conv2d.py  convworking.py  convworking_ssim.py  cross_ae.py  gan.py  load_model.py  load_recog.py  max_pool_2d.py  mlp.py  msssim.py  rbfn.py  ssim.py
result/deprojection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deproj  deprojected.pcd  deprojected.ply  deprojection.cpp  modelo.pcd
result/recognition/: .~lock.hog.ods#  Makefile  all_recog.out  cnn.out  cnn_new.txt  cnn_raw.txt  common.out  common_new.txt  common_raw.txt  dataX.csv  dataY.csv  far_cnn_expressas.txt  far_cnn_rede.txt  far_eigen_expressas.txt  far_eigen_rede.txt  far_fisher_expressas.txt  far_fisher_rede.txt  far_hog_expressas.txt  far_hog_rede.txt  far_lbph_expressas.txt  far_lbph_rede.txt  frr_cnn_expressas.txt  frr_cnn_rede.txt  frr_eigen_expressas.txt  frr_eigen_rede.txt  frr_fisher_expressas.txt  frr_fisher_rede.txt  frr_hog_expressas.txt  frr_hog_rede.txt  frr_lbph_expressas.txt  frr_lbph_rede.txt  rank_n.out  roc.R  score  score.cpp
result/recognition/cnn/: Makefile  cnn.out  common.out  extract_descriptors.out
result/recognition/descriptors/: 041_000_1500.txt  041_000_1501.txt  041_000_1502.txt  041_000_1506.txt  041_000_1512.txt  041_000_1526.txt  041_000_1530.txt  041_000_1534.txt  041_000_1542.txt  041_000_1546.txt  041_000_1548.txt  041_001.txt  041_001_1499.txt  042_000.txt  042_000_1554.txt  042_000_1556.txt  (+58 more)
result/rms/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  result.txt  rms  rms.cpp
(+64 files in other folders)
